Changes towards version 0.6:
- Fixed sporadic uqm.cfg loading errors in release builds - Alex
- Quit (F10) now works correctly during intro (bug #862) - Alex
- Playing failure sounds when entering text consistently (bug #884) - Alex
- 64-bit fixes in construct_response () - Michael
- Removed rotating 3d planet frame caching (cuts mem usage by 5M) - Alex
- One pixel fix in melee menu pictures. - SvdB
- Debugging function to add energy during battle. - SvdB
- Changed slaveshield throb rate to match the 3DO - SvdB
- Fixed recently introduced bug with crew count on exit to HyperSpace.
  (bug #875) - SvdB
- Fixed static vars not reinited in alien comm code (caused various
  side-effects; bug #870) - Alex
- Fixed a spinlock in Melee's final score screen (Bug 879) - Michael
- Phase 2 of online keyconfig - Setup Menu can configure assignment of 
  templates to players - Michael
- Control scheme shifted to Menus + Control Templates in preparation for 
  the online keyconfig - Michael
- Fixes to logic in the Utwig conversations (Bugs 327, 647), from Nic 
  and Michael
- Removed unused and invalid lander font chars - Alex
- Setup menu reads strings out of lbm/setupmenu.txt - Michael
- More fixes towards working 64-bits binaries.
- Flashing outfit modules to build w/ PC menus too; bug #871 - Alex
- Corrected caption Orbit: to Tilt: in planet scan; bug #847 - Alex
- Added missing failure sounds in Outfit, Shipyard, Cargo and Roster;
  played when over/under capacity, not enough RUs, etc; bug #842 -Alex
- Crew retrieved from space after the end of an encounter will no
  longer set the crew larger than the ship's maximum. - SvdB
- Flagship crew numbers are no longer continuously synchronised during
  melee, but only at the beginning and end of the battle. - SvdB
- Various small cleanups. - SvdB
- Debugging function to add crew during battle. - SvdB
- More documentation - SvdB.
- RMPLIFIED PRECURSOR BOMB is now AMPLIFIED, from Vorn (bug #812) 
  -Michael
